# QT6-Example-Project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_cmake.yml
cmake/: Options.cmake
src/: CMakeLists.txt
src/alarm/: AlarmListView.qml  AlarmRinging.qml  AlarmsListModel.hpp  CMakeLists.txt  EditAlarm.qml  TimerBackend.hpp  alarm.hpp  alarm.qml  main.cpp
src/alarm/backend/: AlarmsListModel.hpp  alarm.hpp
src/alarm/view/: AlarmListView.qml  AlarmRinging.qml  EditAlarm.qml  alarm.qml
src/app/: CMakeLists.txt
src/boost.beast/: error_handling.h
src/mv-ex/: CMakeLists.txt  battlefield.hpp  main.cpp  main.qml  tiles.h
src/navalfate/: CMakeLists.txt  battlefield.cpp  battlefield.hpp  entity.cpp  entity.h  main.cpp  main.qml  mine.cpp  mine.h  notes.txt  ship.cpp  ship.h  types.h
src/qt/: CMakeLists.txt  README.md
src/qt/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/quick/: CMakeLists.txt  HelloWorldText.qml  helloworld.cpp  helloworld.qml  invokable.hpp  playground.cpp
src/wiki-ex/: CMakeLists.txt  my_widget.hpp  wiki-ex.cpp
